根据SonarLint提示，修改阻断性问题、严重问题、主要问题